add og meta and canonical

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/css.css" rel="stylesheet">
+	
+    <!-- Social Share -->
+
+	<meta property="og:type" content="article" />
+	<meta property="og:title" content="Gabriel Kalani | Desenvolvedor Web" />
+	<meta property="og:description" content="Oi! Eu sou Gabriel Kalani. Sou Desenvolvedor Web e Caso esteja procurando um Desenvolvedor para seu site. Eu estou aqui." />
+	<meta property="og:image" content="http://www.gabrielkalani.com.br/img/header-bg.jpg"/>
+	<meta property="og:url" content="http://www.gabrielkalani.com.br" />
+	<meta property="og:site_name" content="SkyServices" />
+	<meta property="og:locale" content="pt_BR" />	
+	
+	<link rel="canonical" href="http://www.gabrielkalani.com.br"/>
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
