add og meta and canonical

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta property="og:description" content="Oi! Eu sou Gabriel Kalani. Sou Desenvolvedor Web e Caso esteja procurando um Desenvolvedor para seu site. Eu estou aqui." />
 	<meta property="og:image" content="http://www.gabrielkalani.com.br/img/header-bg.jpg"/>
 	<meta property="og:url" content="http://www.gabrielkalani.com.br" />
-	<meta property="og:site_name" content="SkyServices" />
+	<meta property="og:site_name" content="Gabriel Kalani | Desenvolvedor Web"" />
 	<meta property="og:locale" content="pt_BR" />	
 	
 	<link rel="canonical" href="http://www.gabrielkalani.com.br"/>
